Add host port communication

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,16 @@ set(SOURCES
 #compile all headers and sources in binary file
 add_executable(${CMAKE_PROJECT_NAME}_bin ${HEADERS} ${SOURCES})
 
+#add some properties to executable
+set_target_properties(
+                    ${CMAKE_PROJECT_NAME}_bin PROPERTIES
+                    CXX_STANDARD 17
+                    CXX_STANDARD_REQUIRED ON
+)
+
 #deligate work for subdirectory
 add_subdirectory(test)
 add_subdirectory(lib/googletest) #https://github.com/google/googletest
 
+#show to the linker where the boost libraries located
 target_link_libraries(${CMAKE_PROJECT_NAME}_bin LINK_PUBLIC ${Boost_LIBRARIES})
